<resources>
    <string name="app_name">STYL Register &amp; Login</string>

        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="firstname">First name</string>
        <string name="lastname">Last name</string>
        <string name="emailaddress">Email Address</string>
        <string name="age">Age</string>
        <string name="hobbies">Hobbies</string>
        <string name="emptystring"></string>


</resources>
